Bug 278194 - middle click on 'home' toolbar button should open a new tab
Summary: middle click on 'home' toolbar button should open a new tab
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-21 11:34 UTC by kabud
Modified: 2012-01-10 12:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kabud 2011-07-21 11:34:40 UTC
Version:           1.6.1 (using KDE 4.6.2) 
OS:                Linux

i can middle click the 'Up','Go back','Go forward' and this will open the respective folder in a new tab.

i would expect the same behaviour if i middle click on the 'home' button. however it does nothing.

Reproducible: Always

Steps to Reproduce:
middle-click the 'home' button in the toolbar with the 

Actual Results:  
nothing happens

Expected Results:  
home dir opens in new tab
Comment 1 Jekyll Wu 2012-01-10 12:07:16 UTC
Git commit 394335be01d6ac891b4609db58ceba310da6295b by Jekyll Wu.
Committed on 09/01/2012 at 06:54.
Pushed by jekyllwu into branch 'KDE/4.8'.

Middle clicking the 'Home' button should open home folder in a new tab

The general idea is to make it behave consistently with other navigating
buttons.
FIXED-IN:4.8.0
REVIEW:103659

M  +10   -1    dolphin/src/dolphinmainwindow.cpp
M  +5    -0    dolphin/src/dolphinmainwindow.h

http://commits.kde.org/kde-baseapps/394335be01d6ac891b4609db58ceba310da6295b