Middle clicking the 'Home' button should open home folder in a new tab

The general idea is to make it behave consistently with other navigating
buttons.

BUG: 278194
FIXED-IN:4.8.0
REVIEW:103659